5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1807_2564.log
== TEST (2019-06-09 15:51:03) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for in range(size(vet1)):
	if(vet2[i]> vet2[i]):
		resultado[0]= resultado[0] +1
	elif(vet1[i]=vet2[2]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- ERROR:
File "XXXX", line 5
    for in range(size(vet1)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:51:16) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for in range(size(vet1)):
	if(vet2[i]> vet2[i]):
		resultado[0]= resultado[0] +1
	elif(vet1[i]=vet2[2]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- ERROR:
File "XXXX", line 5
    for in range(size(vet1)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:51:51) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for i in range(size(vet1)):
	if(vet2[i]> vet2[i]):
		resultado[0]= resultado[0] +1
	elif(vet1[i]=vet2[2]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- ERROR:
File "XXXX", line 8
    elif(vet1[i]=vet2[2]):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:52:23) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for i in range(size(vet1)):
	if(vet2[i]> vet2[i]):
		resultado[0]= resultado[0] +1
	elif(vet1[i] = vet2[2]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- ERROR:
File "XXXX", line 8
    elif(vet1[i] = vet2[2]):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:52:58) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for i in range(size(vet1)):
	if(vet2[i]> vet2[i]):
		resultado[0]= resultado[0] +1
	elif(vet1[i] == vet2[2]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:53:57) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for i in range(size(vet1)):
	if(vet2[i]> vet2[i]):
		resultado[0]= resultado[0] +1
	elif(vet1[i] == vet2[2]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- EXECUTION TIME:
1.14309
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 0  1 11]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[0 5 8]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:54:03) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for i in range(size(vet1)):
	if(vet2[i]> vet2[i]):
		resultado[0]= resultado[0] +1
	elif(vet1[i] == vet2[2]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- EXECUTION TIME:
1.19384
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 0  1 11]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
digitedigite[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
digitedigite[0 5 8]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:54:04) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for i in range(size(vet1)):
	if(vet2[i]> vet2[i]):
		resultado[0]= resultado[0] +1
	elif(vet1[i] == vet2[2]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:55:48) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for i in range(size(vet1)):
	if(vet1[i]> vet2[i]):
		resultado[0]= resultado[0] +1
	elif(vet1[i] == vet2[2]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:55:54) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for i in range(size(vet1)):
	if(vet1[i]> vet2[i]):
		resultado[0]= resultado[0] +1
	elif(vet1[i] == vet2[2]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- EXECUTION TIME:
1.17051
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 1 4]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:56:37) 
-- CODE:
from numpy import *
vet1=array(eval(input("digite")))
vet2=array(eval(input("digite")))
resultado=zeros(3,dtype=int)
for i in range(size(vet1)):
	if(vet1[i]> vet2[i]):
		resultado[0] = resultado[0] +1
	elif(vet1[i] == vet2[i]):
		resultado[1]= resultado[1] +1
	else:
		resultado[2]= resultado[2] +1
print(resultado)
		
-- EXECUTION TIME:
1.2155
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
